--- a/Dockerfile.pglite
+++ b/Dockerfile.pglite
@@ -168,6 +168,8 @@ ENV \
     COHERE_API_KEY="" COHERE_MODEL_LIST="" COHERE_PROXY_URL="" \
     # DeepSeek
     DEEPSEEK_API_KEY="" DEEPSEEK_MODEL_LIST="" \
+    # Featherless AI
+    FEATHERLESS_API_KEY="" FEATHERLESS_MODEL_LIST="" \
     # Fireworks AI
     FIREWORKSAI_API_KEY="" FIREWORKSAI_MODEL_LIST="" \
     # Gitee AI
