♻️ refactor: move types to separate package (#8635)
* move types

* fix tests

* fix tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,7 @@
     "baseUrl": ".",
     "types": ["vitest/globals", "@serwist/next/typings"],
     "paths": {
-      "@/libs/model-runtime": ["./packages/model-runtime/src/index.ts"],
-      "@/libs/model-runtime/*": ["./packages/model-runtime/src/*"],
-      "@/database/*": ["./packages/database/src/*", "./src/database/*"],
-      "@/const/*": ["./packages/const/src/*"],
-      "@/utils/*": ["./packages/utils/src/*", "./src/utils/*"],
-      "@/types/*": ["./packages/types/src/*", "./src/types/*"],
+      "@/types/*": ["./packages/types/src/*"],
       "@/*": ["./src/*"],
       "~test-utils": ["./tests/utils.tsx"]
     },
