--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,11 +2,16 @@
   "name": "@lobechat/types",
   "version": "1.0.0",
   "private": true,
-  "main": "./src/index.ts",
-  "dependencies": {
-    "@lobechat/web-crawler": "workspace:*",
-    "@lobehub/chat-plugin-sdk": "^1.32.4",
-    "type-fest": "^4.41.0",
-    "zod": "^3.25.76"
+  "exports": {
+    "./*": {
+      "types": [
+        "./src/*.ts",
+        "./src/*/index.ts"
+      ],
+      "default": [
+        "./src/*.ts",
+        "./src/*/index.ts"
+      ]
+    }
   }
 }
