--- a/package.json
+++ b/package.json
@@ -137,7 +137,6 @@
     "@fal-ai/client": "^1.6.1",
     "@formkit/auto-animate": "^0.8.2",
     "@google/genai": "^1.10.0",
-    "@hono/zod-validator": "^0.7.0",
     "@huggingface/inference": "^2.8.1",
     "@icons-pack/react-simple-icons": "9.6.0",
     "@khmyznikov/pwa-install": "0.3.9",
@@ -147,6 +146,7 @@
     "@lobechat/file-loaders": "workspace:*",
     "@lobechat/model-runtime": "workspace:*",
     "@lobechat/prompts": "workspace:*",
+    "@lobechat/openapi": "workspace:*",
     "@lobechat/web-crawler": "workspace:*",
     "@lobehub/analytics": "^1.6.0",
     "@lobehub/charts": "^2.0.0",
