⬆️ chore: upgrade @lobehub/icons to v2.29.0
- Update @lobehub/icons from ^2.27.1 to ^2.29.0
- Includes latest icon updates and improvements

--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "@lobehub/charts": "^2.0.0",
     "@lobehub/chat-plugin-sdk": "^1.32.4",
     "@lobehub/chat-plugins-gateway": "^1.9.0",
-    "@lobehub/icons": "^2.27.1",
+    "@lobehub/icons": "^2.29.0",
     "@lobehub/market-sdk": "^0.22.7",
     "@lobehub/tts": "^2.0.1",
     "@lobehub/ui": "^2.8.3",
@@ -224,6 +224,7 @@
     "ollama": "^0.5.16",
     "openai": "^4.104.0",
     "openapi-fetch": "^0.9.8",
+    "package.json": "^2.0.1",
     "partial-json": "^0.1.7",
     "path-browserify-esm": "^1.0.6",
     "pdf-parse": "^1.1.1",
