✨ feat: support Vercel AI Gateway provider

--- a/Dockerfile.pglite
+++ b/Dockerfile.pglite
@@ -247,7 +247,9 @@ ENV \
     # Infini-AI
     INFINIAI_API_KEY="" INFINIAI_MODEL_LIST="" \
     # 302.AI
-    AI302_API_KEY="" AI302_MODEL_LIST=""
+    AI302_API_KEY="" AI302_MODEL_LIST="" \
+    # Vercel AI Gateway
+    VERCELAIGATEWAY_API_KEY="" VERCELAIGATEWAY_MODEL_LIST=""
 
 USER nextjs
 
