--- a/.env.example
+++ b/.env.example
@@ -153,6 +153,10 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 
 # AIHUBMIX_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+### Vercel AI Gateway ###
+
+# VERCELAIGATEWAY_API_KEY=your_vercel_ai_gateway_api_key
+
 
 ########################################
 ############ Market Service ############
