--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
     "baseUrl": ".",
     "types": ["vitest/globals", "@serwist/next/typings"],
     "paths": {
-      "@/types/*": ["./packages/types/src/*"],
+      "@/libs/model-runtime": ["./packages/model-runtime/src/index.ts"],
+      "@/libs/model-runtime/*": ["./packages/model-runtime/src/*"],
+      "@/database/*": ["./packages/database/src/*", "./src/database/*"],
+      "@/const/*": ["./packages/const/src/*"],
+      "@/utils/*": ["./packages/utils/src/*", "./src/utils/*"],
+      "@/types/*": ["./packages/types/src/*", "./src/types/*"],
       "@/*": ["./src/*"],
       "~test-utils": ["./tests/utils.tsx"]
     },
